--- a/index.html
+++ b/index.html
@@ -6,13 +6,12 @@
         
     </head>
     <body>
-
+        
         <div class="Labirynth">
-            <img class="Labirynth_spritesheet" src="https://www.spriters-resource.com/resources/sheets/50/52631.png?updated=1578964573" alt="FullImg">
+            <img class="Labirynth_spritesheet" src="D:\SoftwareDevelopment\GitHub\MariaPenova\PacMan\transperent-sprite-sheet.png" alt="Labirynth">
         </div>
-
         <div class="PacMan">
-            <img class="PacMan_spritesheet going-down" src="D:\PacMan\pacOnly.png" alt="Character">
+            <img class="PacMan_spritesheet" src="D:\SoftwareDevelopment\GitHub\MariaPenova\PacMan\transperent-sprite-sheet.png" alt="CharacterOnly">
         </div>
 
     </body>
