--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             <img class="Labirynth_spritesheet" src="D:\SoftwareDevelopment\GitHub\MariaPenova\PacMan\transperent-sprite-sheet.png" alt="Labirynth">
         </div>
         <div class="PacMan">
-            <img class="PacMan_spritesheet" src="D:\SoftwareDevelopment\GitHub\MariaPenova\PacMan\transperent-sprite-sheet.png" alt="CharacterOnly">
+            <img class="PacMan_spritesheet going-left" src="D:\SoftwareDevelopment\GitHub\MariaPenova\PacMan\transperent-sprite-sheet.png" alt="CharacterOnly">
         </div>
 
     </body>
