--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
     <head>
         <link rel="stylesheet" type="text/css" href="style.css"
         media="screen" />
@@ -13,6 +14,10 @@
         <div class="PacMan">
             <img id="pacman" class="PacMan_spritesheet going-left" src="D:\SoftwareDevelopment\GitHub\MariaPenova\PacMan\transperent-sprite-sheet.png" alt="CharacterOnly">
         </div>
+        <div class="Dot" style="left: 20px; top: 10px;">
+            <img id="dot" class="Dot_spritesheet going-left" src="D:\SoftwareDevelopment\GitHub\MariaPenova\PacMan\transperent-sprite-sheet.png" alt="CharacterOnly">
+        </div>
+        
         <script src="app.js"></script>
     </body>
 </html>
