--- a/index.html
+++ b/index.html
@@ -12,12 +12,14 @@
             <img class="Labirynth_spritesheet" src="D:\SoftwareDevelopment\GitHub\MariaPenova\PacMan\transperent-sprite-sheet.png" alt="Labirynth">
         </div>
         <div class="PacMan">
-            <img id="pacman" class="PacMan_spritesheet going-left" src="D:\SoftwareDevelopment\GitHub\MariaPenova\PacMan\transperent-sprite-sheet.png" alt="CharacterOnly">
+            <img id="pacman" class="PacMan_spritesheet " src="D:\SoftwareDevelopment\GitHub\MariaPenova\PacMan\transperent-sprite-sheet.png" alt="CharacterOnly">
         </div>
-        <div class="Dot" style="left: 20px; top: 10px;">
-            <img id="dot" class="Dot_spritesheet going-left" src="D:\SoftwareDevelopment\GitHub\MariaPenova\PacMan\transperent-sprite-sheet.png" alt="CharacterOnly">
+        <div class="Dot" style="left: 25px; top: 10px;">
+            <img id="dot" class="Dot_spritesheet " src="D:\SoftwareDevelopment\GitHub\MariaPenova\PacMan\transperent-sprite-sheet.png" alt="CharacterOnly">
         </div>
-        
+        <div class="BigDot" style="left: 14px; top: 26px;">
+            <img id="bigDot" class="BigDot_spritesheet " src="D:\SoftwareDevelopment\GitHub\MariaPenova\PacMan\transperent-sprite-sheet.png" alt="CharacterOnly">
+        </div>
         <script src="app.js"></script>
     </body>
 </html>
