--- a/index.html
+++ b/index.html
@@ -14,6 +14,18 @@
         <div class="PacMan">
             <img id="pacman" class="PacMan_spritesheet " src="D:\SoftwareDevelopment\GitHub\MariaPenova\PacMan\transperent-sprite-sheet.png" alt="CharacterOnly">
         </div>
+        <div class="RedGhost">
+            <img id="redGhost" class="RedGhost_spritesheet " src="D:\SoftwareDevelopment\GitHub\MariaPenova\PacMan\transperent-sprite-sheet.png" alt="CharacterOnly">
+        </div>
+        <div class="PurpleGhost">
+            <img id="purpleGhost" class="PurpleGhost_spritesheet " src="D:\SoftwareDevelopment\GitHub\MariaPenova\PacMan\transperent-sprite-sheet.png" alt="CharacterOnly">
+        </div>
+        <div class="TurquoiseGhost">
+            <img id="turquoiseGhost" class="TurquoiseGhost_spritesheet " src="D:\SoftwareDevelopment\GitHub\MariaPenova\PacMan\transperent-sprite-sheet.png" alt="CharacterOnly">
+        </div>
+        <div class="OrangeGhost">
+            <img id="orangeGhost" class="OrangeGhost_spritesheet " src="D:\SoftwareDevelopment\GitHub\MariaPenova\PacMan\transperent-sprite-sheet.png" alt="CharacterOnly">
+        </div>
         <div class="Dot" style="left: 25px; top: 10px;">
             <img id="dot" class="Dot_spritesheet " src="D:\SoftwareDevelopment\GitHub\MariaPenova\PacMan\transperent-sprite-sheet.png" alt="CharacterOnly">
         </div>
